# cloudflare-email-to-twilio-sms

./: .dev.vars.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HIVE_MIND_FINAL_REPORT.md  POETRY_MIGRATION.md  README.md  README.md.backup-20251113-221653  package.json  tsconfig.json  vitest.config.ts
config/: wrangler.toml
docs/: ALL_TESTS_FIXED_COMPLETE.md  ANALYST_COMPREHENSIVE_SUMMARY.md  ANALYST_README_VALIDATION.md  ANALYST_UI_VALIDATION.md  ANALYST_WORKFLOW_VALIDATION.md  API.md  ARCHITECTURE-SUMMARY.md  BEFORE_AFTER_COMPARISON.md  CLOUDFLARE_EMAIL_WORKER_REQUIREMENTS.md  CODE_FIXES_PRIORITY.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_MASTER.md  DEPLOYMENT_READINESS_ASSESSMENT.md  DEV_DEPENDENCIES_UPDATE.md  EMAIL_WORKER_GAP_ANALYSIS.md  EMAIL_WORKER_IMPLEMENTATION.md  EVIDENCE_PACKAGE.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_DOCUMENTATION_REPORT.md  FINAL_TEST_RESULTS_SUMMARY.md  GITIGNORE_AUDIT_REPORT.md  HANDOFF_TO_COLLECTIVE.md  HIVE_MIND_COMPREHENSIVE_AUDIT_REPORT.md  HIVE_MIND_DOCUMENTATION_AUDIT.md  HIVE_MIND_EMAIL_WORKER_COMPLETION.md  HIVE_MIND_FINAL_REPORT.md  HIVE_MIND_VALIDATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  OPERATIONS.md  POETRY_GUIDE.md  QUICK_REFERENCE.md  QUICK_SUMMARY.md  RESEARCH_FINDINGS.md  SECURITY-ALERT.md  SECURITY_FIXES.md  SECURITY_FIXES_SUMMARY.md  TEST_DOCUMENTATION_INDEX.md  TEST_FIXES_COMPLETE.md  TROUBLESHOOTING.md  (+27 more)
docs/analysis/: dependency-analysis.md  dependency-matrix.md
docs/hive-mind/: DEPLOYMENT_CHECKLIST.md  HIVE_MIND_FINAL_REPORT.md  TESTER_FINAL_REPORT.md  analyst-integration-validation.md  coder-fixes-applied.md  researcher-findings.md  tester-coverage-analysis.md  tester-validation-scenarios.md
docs/testing/: DEPLOYMENT_VALIDATION_CHECKLIST.md  DEPLOYMENT_VALIDATION_REPORT.md  EMAIL_WORKER_TESTING.md  QA_COMPREHENSIVE_TEST_REPORT.md  TESTER_DEPLOYMENT_VALIDATION.md  TESTER_FINAL_REPORT.md  TESTING_DELIVERABLES.md  TESTING_STRATEGY.md  TESTING_SUMMARY.md  TEST_EXECUTION_SUMMARY.md  TEST_SCENARIOS_COMPREHENSIVE.md
src/middleware/: rate-limiter.ts  validator.ts
src/services/: twilio-service.ts  twilio-service.ts.backup-20251113-221637
src/types/: index.ts
src/utils/: content-processor.ts  logger.ts  phone-parser.ts
src/worker/: index.ts  index.ts.backup-20251113-222601
streamlit-app/: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile.poetry  IMPLEMENTATION_SUMMARY.md  Makefile  POETRY.md  PYTHON_312_RESOLUTION_REPORT.md  QUICKSTART.md  README.md  RESOLUTION_SUMMARY.md  VERIFICATION.md  app.py  pyproject.toml  requirements.txt  run.sh
streamlit-app/.streamlit/: config.toml
streamlit-app/components/: __init__.py  code_display.py  download_manager.py  input_form.py.backup-20251113-221639
streamlit-app/generators/: __init__.py  code_generator.py
streamlit-app/schemas/: __init__.py  config_schema.py
streamlit-app/scripts/: verify_install.sh
streamlit-app/templates/config/: .env.example.j2  .env.example.j2.backup-20251113-221653  .gitignore.j2  package.json.j2  tsconfig.json.j2  wrangler.toml.j2
streamlit-app/templates/docs/: README.md.j2  deploy.sh.j2
streamlit-app/templates/email-worker/: .env.example.j2  README.md.j2  deploy.sh.j2  index.ts.j2.backup-20251113-221639  package.json.j2  types.ts.j2  utils.ts.j2  wrangler.toml.j2
streamlit-app/templates/worker/: index.ts.j2
streamlit-app/tests/: QUICKSTART.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_components.py  test_deployment_workflow.py  test_edge_cases.py  test_email_worker_generation.py  test_generators.py  test_integration.py  test_python312_compat.py  test_utils.py  test_validators.py
streamlit-app/utils/: __init__.py  constants.py  helpers.py  validators.py
test-worker-output/: .gitignore  README.md  deploy.sh  package.json  tsconfig.json  wrangler.toml
test-worker-output/src/: index.ts
tests/: README.md  SECURITY_VALIDATION_REPORT.md  TEST_SUMMARY.md  generate_test_worker.py  npm-audit-output.txt  test_fixes_simple.py  test_phone_validation_fix.js  test_sanitization.py  test_validation_blocking.py  verify_security_fixes.py  verify_security_ui_fixes.py
tests/fixtures/: mock-services.ts  test-data.json
tests/generated-worker-test/: .env.example  README.md  deploy.sh  package.json  wrangler.toml
tests/generated-worker-test/src/: index.ts
tests/helpers/: test-utils.ts
tests/worker/: content-processor.spec.ts  integration.spec.ts  performance.spec.ts  phone-parser.spec.ts  rate-limiter.spec.ts  security.spec.ts  twilio-service.spec.ts  validator.spec.ts
