[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cloudflare-email-to-twilio-sms-generator"
version = "1.0.0"
description = "Streamlit application for generating Cloudflare Worker code to convert emails to SMS via Twilio"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/cloudflare-email-to-twilio-sms"
repository = "https://github.com/yourusername/cloudflare-email-to-twilio-sms"
documentation = "https://github.com/yourusername/cloudflare-email-to-twilio-sms/blob/main/docs"
keywords = [
    "streamlit",
    "cloudflare",
    "workers",
    "twilio",
    "sms",
    "email",
    "email-to-sms",
    "code-generator",
    "serverless"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Streamlit",
]

# Package includes
packages = [
    { include = "components" },
    { include = "generators" },
    { include = "schemas" },
    { include = "utils" },
]

# Exclude from package distribution
exclude = [
    "tests",
    ".streamlit/secrets.toml",
    "*.pyc",
    "__pycache__",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
    "*.egg-info",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
# Web Framework - pinned for UI stability
streamlit = "1.31.0"
# Template Engine
jinja2 = "^3.1.3"
markupsafe = "^2.1.5"
# Syntax Highlighting
pygments = "^2.17.2"
# Validation
validators = "^0.22.0"
pydantic = "^2.6.0"
# Type Hints
typing-extensions = "^4.9.0"
# Environment Variables
python-dotenv = "^1.0.1"
# String Utilities
python-slugify = "^8.0.4"
# Phone Number Handling
phonenumbers = "^8.13.29"
# Date/Time
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-xdist = "^3.3.1"
pytest-timeout = "^2.1.0"
pytest-random-order = "^1.1.0"
faker = "^19.3.1"
freezegun = "^1.2.2"
responses = "^0.23.3"
toml = "^0.10.2"
tomli = "^2.0.1"
pytest-benchmark = "^4.0.0"
pytest-html = "^3.2.0"

[tool.poetry.scripts]
cloudflare-email-to-twilio-sms-generator = "streamlit:run app.py"
e2s-start = "streamlit:run app.py --server.port=8501 --server.address=0.0.0.0"

# Black Configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort Configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*"]

# MyPy Configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true

# Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests",
]

# Coverage Configuration
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/env/*",
    "*/ENV/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstract",
]

[tool.coverage.html]
directory = "htmlcov"
